fixed layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ div {
     width: 560px;
     height: 560px;
     border-radius: 10px;
-    margin-top: 5.25em;
+    margin-top: 1em;
 }
 
 .grid div {
